--- a/logebien_front_end-lastUpdate/angular.json
+++ b/logebien_front_end-lastUpdate/angular.json
@@ -38,18 +38,18 @@
           },
           "configurations": {
             "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
-                }
-              ],
+           "budgets": [
+  {
+    "type": "initial",
+    "maximumWarning": "2mb",
+    "maximumError": "5mb"
+  },
+  {
+    "type": "anyComponentStyle",
+    "maximumWarning": "20kb",  
+    "maximumError": "30kb"    
+  }
+],
               "outputHashing": "all"
             },
             "development": {
