--- a/microservice/config-server/src/main/resources/application.properties
+++ b/microservice/config-server/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=9090
 spring.application.name=microservice-configuration
 spring.profiles.active=git
-spring.cloud.config.server.git.uri=https://github.com/medaziz2002/config
+spring.cloud.config.server.git.uri=https://github.com/malik-mnsr/kubernetesConfig
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=master
 management.endpoints.web.exposure.include=*
 logging.level.org.springframework.cloud.config=DEBUG
+eureka.client.service-url.defaultZone=http://eureka-server.default.svc.cluster.local:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.prefer-ip-address=true
