--- a/microservice/discovery-server/src/main/resources/application.properties
+++ b/microservice/discovery-server/src/main/resources/application.properties
@@ -1,5 +1,2 @@
-
-
-
 spring.application.name=microservice-eureka
-spring.config.import=configserver:http://localhost:9090
+spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
