--- a/microservice/microservice-auth/src/main/resources/application.properties
+++ b/microservice/microservice-auth/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8094
 spring.application.name=microservice-authentification
-spring.config.import=configserver:http://localhost:9090
+spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
 
 
 
