--- a/microservice/bien/src/main/resources/application.properties
+++ b/microservice/bien/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=microservice-logement
 server.port=8090
-spring.config.import=configserver:http://localhost:9090
+spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
