--- a/microservice/gateway-service/src/main/resources/application.yml
+++ b/microservice/gateway-service/src/main/resources/application.yml
@@ -2,6 +2,6 @@ spring:
   application:
     name: microservice-gateway
   config:
-    import: configserver:http://localhost:9090
+    import: configserver:http://config-server.default.svc.cluster.local:9090
 
 
