--- a/microservice/payment-microservice/src/main/resources/application.properties
+++ b/microservice/payment-microservice/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=payment-microservice
 server.port=8093
-spring.config.import=configserver:http://localhost:9090
+spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
+
