--- a/Manifest Kubernetes/BackEnd/deployment-discovery.yaml
+++ b/Manifest Kubernetes/BackEnd/deployment-discovery.yaml
@@ -12,10 +12,14 @@ spec:
     metadata:
       labels:
         app: eureka-server
+      annotations:
+        prometheus.io/scrape: "true"
+        prometheus.io/path:   "/actuator/prometheus"
+        prometheus.io/port:   "8761" 
     spec:
       containers:
       - name: eureka-server
-        image: malikmnsr/discovery-service
+        image: discovery-service #malikmnsr/discovery-service
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8761
