--- a/microservice/config-server/src/main/resources/application.properties
+++ b/microservice/config-server/src/main/resources/application.properties
@@ -10,3 +10,7 @@ eureka.client.service-url.defaultZone=http://eureka-server.default.svc.cluster.l
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.instance.prefer-ip-address=true
+
+management.endpoint.prometheus.enabled=true
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
