--- a/microservice/microservice-auth/src/main/resources/application.properties
+++ b/microservice/microservice-auth/src/main/resources/application.properties
@@ -3,4 +3,8 @@ spring.application.name=microservice-authentification
 spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
 
 
-
+#Actuator prometheus endpoint
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.prometheus.enabled=true
