--- a/Manifest Kubernetes/BackEnd/config-server-service.yaml
+++ b/Manifest Kubernetes/BackEnd/config-server-service.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: config-server
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path:   "/actuator/prometheus"
+    prometheus.io/port:   "9090"
 spec:
   selector:
     app: config-server
