--- a/Manifest Kubernetes/BackEnd/payment-service copy.yaml
+++ b/Manifest Kubernetes/BackEnd/payment-service copy.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: payment-service
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path:   "/actuator/prometheus"
+    prometheus.io/port:   "8093"
 spec:
   selector:
     app: payment-service
