--- a/Manifest Kubernetes/BackEnd/service-auth.yaml
+++ b/Manifest Kubernetes/BackEnd/service-auth.yaml
@@ -2,12 +2,20 @@ apiVersion: v1
 kind: Service
 metadata:
   name: authentification-service
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path:   "/actuator/prometheus"
+    prometheus.io/port:   "8094"
 spec:
   type: ClusterIP
   ports:
-  - port: 8094
-    targetPort: 8094
-    protocol: TCP
-    name: http
+    - name: http
+      port: 8094
+      targetPort: 8094
+      protocol: TCP
+    - name: management
+      port: 8888
+      targetPort: 8888
   selector:
     app: authentification
+
