--- a/Manifest Kubernetes/BackEnd/service-discovery.yaml.yaml
+++ b/Manifest Kubernetes/BackEnd/service-discovery.yaml.yaml
@@ -3,6 +3,10 @@ kind: Service
 metadata:
   name: eureka-server
   namespace: default
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path:   "/actuator/prometheus"
+    prometheus.io/port:   "8761"
 spec:
   type: ClusterIP
   ports:
