--- a/Manifest Kubernetes/BackEnd/service-logement.yaml
+++ b/Manifest Kubernetes/BackEnd/service-logement.yaml
@@ -2,6 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ter-logement-service
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path:   "/actuator/prometheus"
+    prometheus.io/port:   "8090"
   labels:
     app: ter-logement
 spec:
