--- a/microservice/bien/src/main/resources/application.properties
+++ b/microservice/bien/src/main/resources/application.properties
@@ -11,3 +11,8 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+#Actuator prometheus endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
