--- a/microservice/discovery-server/src/main/resources/application.properties
+++ b/microservice/discovery-server/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=microservice-eureka
 spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
+
+#Actuator prometheus endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.health.show-details=always
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
