--- a/microservice/gateway-service/src/main/resources/application.yml
+++ b/microservice/gateway-service/src/main/resources/application.yml
@@ -4,4 +4,18 @@ spring:
   config:
     import: configserver:http://config-server.default.svc.cluster.local:9090
 
+server:
+  port: 8888
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+  endpoint:
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true 
