--- a/microservice/microservice-auth/pom.xml
+++ b/microservice/microservice-auth/pom.xml
@@ -119,6 +119,17 @@
 
 
 
+     <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
+</dependency>
+
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+    <scope>runtime</scope>
+</dependency>
+
 
 
         <dependency>
@@ -142,6 +153,8 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+            
         </dependencies>
     </dependencyManagement>
 
