--- a/microservice/payment-microservice/src/main/resources/application.properties
+++ b/microservice/payment-microservice/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=payment-microservice
 server.port=8093
 spring.config.import=configserver:http://config-server.default.svc.cluster.local:9090
 
+#Actuator prometheus endpoint
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.metrics.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
