--- a/Manifest Kubernetes/BackEnd/payment-deployment.yaml
+++ b/Manifest Kubernetes/BackEnd/payment-deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
         - name: payment-service
-          image: payment-service #malikmnsr/payment-service:latest
+          image: xenender/payment-service:latest #payment-service #malikmnsr/payment-service:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8093
