--- a/Manifest Kubernetes/Nginx Config Files/nginx.conf
+++ b/Manifest Kubernetes/Nginx Config Files/nginx.conf
@@ -16,7 +16,7 @@ server {
         }
 
         # Normal API requests
-        proxy_pass http://www.aziz.com/api;
+        proxy_pass http://www.behome.com/api;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
 
