--- a/Manifest Kubernetes/FrontEnd/ingress.yaml
+++ b/Manifest Kubernetes/FrontEnd/ingress.yaml
@@ -12,7 +12,7 @@ metadata:
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
 spec:
   rules:
-  - host: www.aziz.com
+  - host: www.behome.com
     http:
       paths:
       - path: /
